# stereo-explorer

./: .clang-format  CMakeLists.txt  display.h  main.cpp  model.cpp  view.h  view_user.cpp
incl/: model.h  pixel.h
src/: view.cpp
